--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# ignoring .org for personal notes
+*.org
 
 # Created by https://www.toptal.com/developers/gitignore/api/emacs,python,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=emacs,python,macos
